aggiunta documentazione java + ultime swagger ui docs
